<resources>
    <string name="app_name" translatable="false">SettoWally</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_button">Search Button</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="prev">Prev</string>
    <string name="details">Details</string>
    <string name="download">Download</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="quality">Quality</string>
    <string name="tiny">Tiny</string>
    <string name="small">Small</string>
    <string name="portrait">Portrait</string>
    <string name="original">Original</string>
    <string name="medium">Medium</string>
    <string name="large2x">Large2x</string>
    <string name="large">Large</string>
    <string name="landscape">Landscape</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system">System</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="developer">Developer :</string>
    <string name="adem_ayar" translatable="false">Adem Ayar</string>
    <string name="see_more_apps_on_play_store">See more apps on Play Store</string>
    <string name="photo_details">Photo Details</string>
    <string name="height">Height:</string>
    <string name="photographer">Photographer:</string>
    <string name="width">"Width: "</string>
    <string name="close">Close</string>
    <string name="setting_wallpaper_to">Setting wallpaper to:</string>
    <string name="set_wallpaper_to_lock_screen">Set wallpaper to lock screen</string>
    <string name="set_wallpaper_to_home_screen">Set wallpaper to home screen</string>
    <string name="set_wallpaper_to_home_and_lock_screen">Set wallpaper to home and lock screen</string>
    <string name="wallpaper_set_to_home_screen">Wallpaper set to home screen</string>
    <string name="wallpaper_set_to_lock_screen">Wallpaper set to lock screen</string>
    <string name="wallpaper_set_to_system">Wallpaper set to system</string>
    <string name="download_wallpaper">Download Wallpaper</string>
    <string name="select_the_quality_you_want_to_download">Select the quality you want to download</string>
    <string name="wallpaper_downloaded_quality_portrait">Wallpaper Downloaded Quality : Portrait</string>
    <string name="wallpaper_downloaded_quality_landscape">Wallpaper Downloaded Quality : Landscape</string>
    <string name="wallpaper_downloaded_quality_tiny">Wallpaper Downloaded Quality : Tiny</string>
    <string name="wallpaper_downloaded_quality_small">Wallpaper Downloaded Quality : Small</string>
    <string name="wallpaper_downloaded_quality_medium">Wallpaper Downloaded Quality : Medium</string>
    <string name="wallpaper_downloaded_quality_large">Wallpaper Downloaded Quality : Large</string>
    <string name="wallpaper_downloaded_quality_large2x">Wallpaper Downloaded Quality : Large2x</string>
    <string name="wallpaper_downloaded_quality_original">Wallpaper Downloaded Quality : Original</string>
    <string name="photo">Photo</string>
    <string name="about_this_photo">About this photo</string>
    <string name="average_color">Average Color</string>
    <string name="description">Description</string>
    <string name="you_are_at_first_page">You are at first page</string>
    <string name="developer_adem_ayar">Developer : Adem Ayar</string>
    <string name="search">Search...</string>
    <string name="HeyCheckMyApp">"Hey check my app at: "</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="there_are_no_image_in_favorites">There are no image in favorites</string>
    <string name="there_is_an_error_occurred">There is an error occurred!</string>
</resources>