<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <TextView
            android:id="@+id/settingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/porkys"
            android:text="@string/settings"
            android:textColor="?attr/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/settingsHeaderDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/settingsHeaderDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            app:dividerColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsHeader" />

        <TextView
            android:id="@+id/darkModeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/porkys"
            android:text="@string/dark_mode"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsHeaderDivider" />

        <LinearLayout
            android:id="@+id/darkModeChipGroupContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/darkModeHeader">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/darkModeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:chipSpacing="24dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/darkModeChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/lightModeChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/systemModeChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/darkModeHeaderDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            app:dividerColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/darkModeChipGroupContainer" />

        <TextView
            android:id="@+id/qualityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/porkys"
            android:text="@string/quality"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/darkModeHeaderDivider" />

        <LinearLayout
            android:id="@+id/qualityChipGroupContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qualityHeader">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="36dp"
                android:paddingVertical="10dp"
                app:chipSpacingHorizontal="15dp"
                app:chipSpacingVertical="10dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/originalQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/original" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/large2xQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large2x" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/largeQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/landspaceQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/landscape" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/portraitQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/portrait" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/mediumQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tinyQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tiny" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/smallQualityChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/small" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/qualityHeaderDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            app:dividerColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qualityChipGroupContainer" />

        <TextView
            android:id="@+id/cacheHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/porkys"
            android:text="@string/cache"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qualityHeaderDivider" />

        <Button
            android:id="@+id/cacheClearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/clear_cache"
            app:layout_constraintEnd_toEndOf="@id/cacheHeader"
            app:layout_constraintStart_toStartOf="@id/cacheHeader"
            app:layout_constraintTop_toBottomOf="@id/cacheHeader" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/cacheHeaderDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            app:dividerColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cacheClearButton" />

        <TextView
            android:id="@+id/aboutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/porkys"
            android:text="@string/about"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cacheHeaderDivider" />

        <TextView
            android:id="@+id/developerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutHeader"
            tools:text="Developer : Adem Ayar" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/googleDevProfileButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:elevation="8dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/developerText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <ImageButton
                    android:id="@+id/googlePlayButtonImage"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="?attr/colorSecondaryContainer"
                    android:elevation="1dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_google_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:text="@string/see_more_apps_on_play_store"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>